--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>吃鱼吃米ChMi🍓的博客</title>
+<title>吃鱼吃米ChMi🍓</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
@@ -66,19 +66,21 @@
     if (localStorage.getItem("pref-theme") === "dark") {
         document.body.classList.add('dark');
     } else if (localStorage.getItem("pref-theme") === "light") {
-        document.body.classList.remove('dark')
+        document.body.classList.add('light');
     } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.body.classList.add('dark');
     }
-
 </script>
 
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="吃鱼吃米ChMi🍓的博客 (Alt + H)">吃鱼吃米ChMi🍓的博客</a>
+            <a href="http://localhost:1313/" accesskey="h" title="吃鱼吃米ChMi🍓 (Alt + H)" class="logo-link">
+                
+                <span class="logo-text">吃鱼吃米ChMi🍓</span>
+            </a>
             <div class="logo-switches">
-                <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
+                <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round">
@@ -103,27 +105,49 @@
         <ul id="menu">
             <li>
                 <a href="http://localhost:1313/blogs/" title="Blogs">
-                    <span>Blogs</span>
+                    <span class="">
+                        Blogs
+                    </span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/search/" title="Search (Alt &#43; /)" accesskey=/>
-                    <span>Search</span>
+                <a href="http://localhost:1313/search/" title="Search">
+                    <span class="">
+                        Search
+                    </span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:1313/tags/" title="Tags">
-                    <span>Tags</span>
+                    <span class="">
+                        Tags
+                    </span>
                 </a>
             </li>
         </ul>
     </nav>
 </header>
+<style>
+ 
+.logo-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+}
+.logo-avatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    margin-right: 10px;
+    object-fit: cover;
+}
+</style>
 <main class="main"><div class="profile">
     <div class="profile_inner">
         <img draggable="false" src="http://localhost:1313/avatar.png" alt="profile image" title=""
             height="120" width="120" />
-        <h1>吃鱼吃米🍓</h1>
+        <h1>吃鱼吃米ChMi🍓</h1>
         <span>一般通过代码低手</span><div class="social-icons" >
     <a href="https://github.com/fishandrice000000" target="_blank" rel="noopener noreferrer me"
         title="Github">
@@ -142,7 +166,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">吃鱼吃米ChMi🍓的博客</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/">吃鱼吃米ChMi🍓</a></span> · 
 
     <span>
         Powered by
